--- a/sharinpix/src/classes/TagImage.cls
+++ b/sharinpix/src/classes/TagImage.cls
@@ -1,9 +1,11 @@
 public with sharing class TagImage {
-	public Image image;
-	public Tag tag;
-	public string id;
-	public string user;
-	public TagImage(){
-		
-	}
+    public Image image;
+    public Tag tag;
+    public String id;
+    public String user;
+    public Map<String, String> fit;
+
+    public TagImage() {
+
+    }
 }
