--- a/sharinpix/src/classes/TagImage.cls
+++ b/sharinpix/src/classes/TagImage.cls
@@ -3,7 +3,7 @@ public with sharing class TagImage {
     public Tag tag;
     public String id;
     public String user;
-    public Map<String, String> fit;
+    public Map<String, String> transformations;
 
     public TagImage() {
 
